--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -102,6 +102,12 @@
       </div>
       <div class="card__content center">
         <div class="card__information">
+          <!-- Start of Judge.me code -->
+          <div style='{{ jm_style }}' class='jdgm-widget jdgm-preview-badge' data-id='{{ product.id }}' data-auto-install='false'>
+              {{ product.metafields.judgeme.badge }}
+          </div>
+          <!-- End of Judge.me code -->
+
           <h3 class="card__heading{% if card_product.featured_media or settings.card_style == 'standard' %} h5{% endif %}"{% if card_product.featured_media or settings.card_style == 'card' %} id="title-{{ section_id }}-{{ card_product.id }}"{% endif %}>
             <a href="{{ card_product.url }}" class="full-unstyled-link">
               {{ card_product.title | escape }}
