--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -73,7 +73,7 @@
         {%- else -%}
           {%- for i in (1..4) -%}
             <li class="grid__item">
-              {% render 'card-product', show_vendor: section.settings.show_vendor %}
+              {% render 'card-product', show_vendor: section.settings.show_vendor, show_rating: section.settings.show_rating %}
             </li>
           {%- endfor -%}
         {%- endfor -%}
